2009-01-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10065: Use TYPO3 clear.gif for ExtJS in backend.php
	* Fixed bug #10066: AJAX relogin polls server too often

2009-01-11  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #5630: Install tool removes dots from admin usernames (thanks to Stefano Kowalke)
	* Fixed bug #10094: Use foreach instead of while-list-each constructs in t3lib_TCEmain
	* Added feature #10091: Integrate TYPO3_DB->exec_SELECTcountRows()
	* Follow-up to bug #10094: Wrong concatenation of arrays

2009-01-11  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #9825: Copy / Cut icons don't respect t3skin: drag'n'drop in pagetree (credits to Susanne Moog)
	* Fixed bug #10077: Feature: Add Icons to page:module TCEform 
	* Fixed bug #10084: Hardcoded "Toggle All" and " Add New" in section 
	
2009-01-10  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10090: Hanging record sets in t3lib_TCEmain

2008-01-09  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #10086: Core uses deprecated function t3lib_db->sql()
	* Fixed bug #10087: Deprecation annotations are wrong for TYPO3 3.6 and 3.5

2009-01-09  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10083: Constant styles.content.imgtext.separateRows is not defined

2009-01-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9194: Bug: wrong handling of 'is_in' list in TCA element type 'input' (Thanks to Vladimir Podkovanov)

2009-01-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9897: Extending palettes and fields to be displayed in back-end forms mixes up tabs
	* Added feature #9674: TCEmain changes for new improved record recycling concept (thanks to Julian Kleinhans)
	* Fixed bug #9893: Syntax error in TCA types definitions of tt_content
	* Added feature #4427: Enable stdWrap for HMENU.alwaysActivePIDlist (thanks to Dan Osipov)

2009-01-07  Francois Suter <francois@typo3.org>

	* Fixed bug #10075: Rootline cache does not work in multilingual websites
